# wildfire-dl-da-forecasting

./: .gitignore  License.md  README.md  TODO.md  VAE.py  decompression.py  plotting.py  pyproject.toml  requirements.txt  setup.py  utils.py  vae_image_selection.ipynb
.github/workflows/: ci.yml
atlaswildfiretool/assimilation/: decompression.py  utils.py
atlaswildfiretool/generative/: dataset.py  decompression.py  model.py  training.py
atlaswildfiretool/notebooks/assimilation/: data_assimilation.ipynb
atlaswildfiretool/notebooks/generative/: CNNVAE_exploration.ipynb  (+4 more)
atlaswildfiretool/tests/: test_data_assimilation.py  test_dataloader.py  test_decompression.py  test_generative_dataset.py  test_generative_training.py  test_generative_utils.py  test_model_train_test.py  test_pre_processing.py  test_train_pca.py
docs/: Makefile  assimilation.rst  conf.py  forecasting.rst  generative.rst  index.rst
src/assimilation/: __init__.py  autoencoder.py  cnn.py  data_assimilation.py  decompression.py  train_pca.py  utils.py
src/forecasting/: __init__.py  dataloader.py  generate_images.py  loss_func.py  model.py  model_train.py  pre_proccessing.py
src/generative/: dataset.py  decompression.py  model.py  plotting.py  training.py  utils.py
src/tests/: misc.py  test_data_assimilation.py  test_dataloader.py  test_decompression.py  test_generate.py  test_generative_dataset.py  test_generative_training.py  test_generative_utils.py  test_loss_func.py  test_model.py  test_model_train_test.py  test_pre_processing.py  test_train_pca.py  test_utils.py
tests/: test_tests.py
(+11 files in other folders)
