[tool.poetry]
name = "your-package-name"
version = "0.1.0"
description = "A brief description of your package."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
matplotlib = "^3.4.2"
numpy = "^1.20.3"
tqdm = "^4.61.1"
torchvision = "^0.9.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
livelossplot = "^0.5.4"
black = { version = "*", allow-prereleases = true }
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Define any command line scripts here

[tool.poetry.plugins."pytest11"]
# Optional, if you have custom pytest plugins